deploy: 7cfe2a431034369f71ebe70311294103150191d7

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <head>
 <meta name=generator content="Hugo 0.93.3">
 <meta charset=utf-8>
-<meta http-equiv=x-ua-compatible content="IE=edge"><title>Jason Peng - Software engineer. </title><meta name=viewport content="width=device-width,initial-scale=1">
-<link rel=alternate type=application/rss+xml href=https://jasonp213.github.io/index.xml title="Jason Peng">
-<meta property="og:title" content="Jason Peng">
+<meta http-equiv=x-ua-compatible content="IE=edge"><title>Coding前來一杯咖啡 - Software engineer. </title><meta name=viewport content="width=device-width,initial-scale=1">
+<link rel=alternate type=application/rss+xml href=https://jasonp213.github.io/index.xml title=Coding前來一杯咖啡>
+<meta property="og:title" content="Coding前來一杯咖啡">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://jasonp213.github.io/">
 <meta name=twitter:card content="summary">
-<meta name=twitter:title content="Jason Peng">
+<meta name=twitter:title content="Coding前來一杯咖啡">
 <meta name=twitter:description content>
 <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,300italic,400italic|Raleway:200,300" rel=stylesheet>
 <link rel=stylesheet type=text/css media=screen href=https://jasonp213.github.io/css/normalize.css>
@@ -20,8 +20,8 @@
 <div class="container wrapper">
 <div class=header>
 <base href=https://jasonp213.github.io/>
-<h1 class=site-title><a href=https://jasonp213.github.io/>Jason Peng</a></h1><div class=site-description><h2>Software engineer.</h2><nav class="nav social">
-<ul class=flat><a href=https://github.com/jasonp213 title=Github><i data-feather=github></i></a><a href=https://twitter.com/jasonp404 title=Twitter><i data-feather=twitter></i></a></ul></nav></div><nav class=nav>
+<h1 class=site-title><a href=https://jasonp213.github.io/>Coding前來一杯咖啡</a></h1><div class=site-description><h2>Software engineer.</h2><nav class="nav social">
+<ul class=flat><a href=https://github.com/jasonp213 title=Github><i data-feather=github></i></a><a href=https://twitter.com/jasonp404 title=Twitter><i data-feather=twitter></i></a><a href=https://www.youtube.com/channel/UCyMexcPF3mlMy52-aY9P-bw title=Youtube><i data-feather=youtube></i></a></ul></nav></div><nav class=nav>
 <ul class=flat>
 <li>
 <a href=/>Home</a>
@@ -36,9 +36,9 @@
 Recent posts
 </h2><div class=posts>
 <div class=post>
-<div class=meta>Mar 7, 2022</div><a class=title href=/posts/first-post/>First Post</a> &mdash;
+<div class=meta>Mar 7, 2022</div><a class=title href=/posts/2022-03-10/hugo-markdown-gh-pages/>使用Hugo撰寫Markdown文件自動部署至Github Pages</a> &mdash;
 <span class=description>
-Reference 黑大-用 Markdown 寫技術文件 - 編輯工具與平台選擇 &mldr;
+description
 </span>
 </div></div></div></div><div class="footer wrapper">
 <nav class=nav>
